[metadata]
name = alarm
version = 1.0.0
summary = alarm
description-file =
    README.rst
author = Syscloud
author-email = admin@syscloud.cn
home-page = http://www.syscloud.cn/

classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]

[entry_points]
console_scripts =
    alarm-api = alarm.cmd.alarm_manager:main

[files]
packages =
    alarm-api

[nosetests]
verbosity=2
detailed-errors=1
